Revert "Altered Gitignore to include Builds"
This reverts commit e919c5655be358e6eb51230983b3f8e159a90fc3.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ ExportedObj/
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
-//# Builds
-//*.apk
-//*.unitypackage
-//Design/Thumbs.db
+# Builds
+*.apk
+*.unitypackage
+Design/Thumbs.db
